--- a/src/main/java/CadAssembleiaHibrida.form
+++ b/src/main/java/CadAssembleiaHibrida.form
@@ -35,55 +35,65 @@
               <EmptySpace min="-2" pref="26" max="-2" attributes="0"/>
               <Group type="103" groupAlignment="0" attributes="0">
                   <Group type="102" attributes="0">
+                      <Component id="labelTitulo" min="-2" max="-2" attributes="0"/>
+                      <EmptySpace min="0" pref="0" max="32767" attributes="0"/>
+                  </Group>
+                  <Group type="102" attributes="0">
                       <Group type="103" groupAlignment="0" attributes="0">
-                          <Group type="102" alignment="0" attributes="0">
-                              <Component id="buttonCadastrar" min="-2" max="-2" attributes="0"/>
+                          <Group type="102" attributes="0">
+                              <Group type="103" groupAlignment="0" attributes="0">
+                                  <Group type="102" alignment="0" attributes="0">
+                                      <Component id="buttonCadastrar" min="-2" max="-2" attributes="0"/>
+                                      <EmptySpace max="-2" attributes="0"/>
+                                      <Component id="buttonConsultar" min="-2" max="-2" attributes="0"/>
+                                      <EmptySpace max="-2" attributes="0"/>
+                                      <Component id="buttonAlterar" min="-2" max="-2" attributes="0"/>
+                                  </Group>
+                                  <Component id="labelId" min="-2" max="-2" attributes="0"/>
+                                  <Component id="labelCodHibrida" alignment="0" min="-2" max="-2" attributes="0"/>
+                                  <Component id="labelEndereco" alignment="0" min="-2" max="-2" attributes="0"/>
+                                  <Component id="labelLinkAcesso" alignment="0" min="-2" max="-2" attributes="0"/>
+                                  <Group type="103" alignment="0" groupAlignment="0" attributes="0">
+                                      <Component id="labelNomeDoOperador" alignment="1" min="-2" max="-2" attributes="0"/>
+                                      <Component id="labelNomeDaEmpresa" min="-2" max="-2" attributes="0"/>
+                                  </Group>
+                              </Group>
                               <EmptySpace max="-2" attributes="0"/>
-                              <Component id="buttonConsultar" min="-2" max="-2" attributes="0"/>
-                              <EmptySpace max="-2" attributes="0"/>
-                              <Component id="buttonAlterar" min="-2" max="-2" attributes="0"/>
-                          </Group>
-                          <Component id="labelId" min="-2" max="-2" attributes="0"/>
-                          <Component id="labelCodHibrida" alignment="0" min="-2" max="-2" attributes="0"/>
-                          <Component id="labelEndereco" alignment="0" min="-2" max="-2" attributes="0"/>
-                          <Component id="labelLinkAcesso" alignment="0" min="-2" max="-2" attributes="0"/>
-                          <Group type="103" alignment="0" groupAlignment="0" attributes="0">
-                              <Component id="labelNomeDoOperador" alignment="1" min="-2" max="-2" attributes="0"/>
-                              <Component id="labelNomeDaEmpresa" min="-2" max="-2" attributes="0"/>
-                          </Group>
-                      </Group>
-                      <EmptySpace max="-2" attributes="0"/>
-                      <Group type="103" groupAlignment="0" attributes="0">
-                          <Component id="buttonExcluir" min="-2" max="-2" attributes="0"/>
-                          <Group type="102" alignment="1" attributes="0">
-                              <EmptySpace min="0" pref="0" max="32767" attributes="0"/>
-                              <Group type="103" groupAlignment="0" max="-2" attributes="0">
-                                  <Component id="textfieldLinkAcesso" max="32767" attributes="0"/>
-                                  <Component id="textfieldNomeDaEmpresa" max="32767" attributes="0"/>
-                                  <Component id="textfieldNomeDoOperador" max="32767" attributes="0"/>
-                                  <Component id="textfieldId" alignment="0" max="32767" attributes="0"/>
-                                  <Component id="textfieldCodHibrida" alignment="0" max="32767" attributes="0"/>
-                                  <Component id="textfieldEndereco" alignment="0" min="-2" pref="307" max="-2" attributes="0"/>
+                              <Group type="103" groupAlignment="0" attributes="0">
+                                  <Component id="buttonExcluir" min="-2" max="-2" attributes="0"/>
+                                  <Group type="102" alignment="1" attributes="0">
+                                      <EmptySpace min="0" pref="0" max="32767" attributes="0"/>
+                                      <Group type="103" groupAlignment="0" max="-2" attributes="0">
+                                          <Component id="textfieldLinkAcesso" max="32767" attributes="0"/>
+                                          <Component id="textfieldNomeDaEmpresa" max="32767" attributes="0"/>
+                                          <Component id="textfieldNomeDoOperador" max="32767" attributes="0"/>
+                                          <Component id="textfieldId" alignment="0" max="32767" attributes="0"/>
+                                          <Component id="textfieldCodHibrida" alignment="0" max="32767" attributes="0"/>
+                                          <Component id="textfieldEndereco" alignment="0" min="-2" pref="307" max="-2" attributes="0"/>
+                                      </Group>
+                                  </Group>
                               </Group>
                           </Group>
+                          <Group type="103" groupAlignment="1" attributes="0">
+                              <Group type="102" attributes="0">
+                                  <Component id="buttonLimpar" min="-2" max="-2" attributes="0"/>
+                                  <EmptySpace max="-2" attributes="0"/>
+                                  <Component id="buttonSair" min="-2" max="-2" attributes="0"/>
+                              </Group>
+                              <Component id="jScrollPane1" min="-2" pref="655" max="-2" attributes="0"/>
+                          </Group>
                       </Group>
-                  </Group>
-                  <Group type="103" groupAlignment="1" attributes="0">
-                      <Group type="102" attributes="0">
-                          <Component id="buttonLimpar" min="-2" max="-2" attributes="0"/>
-                          <EmptySpace max="-2" attributes="0"/>
-                          <Component id="buttonSair" min="-2" max="-2" attributes="0"/>
-                      </Group>
-                      <Component id="jScrollPane1" min="-2" pref="655" max="-2" attributes="0"/>
+                      <EmptySpace min="0" pref="28" max="32767" attributes="0"/>
                   </Group>
               </Group>
-              <EmptySpace min="0" pref="28" max="32767" attributes="0"/>
           </Group>
       </Group>
     </DimensionLayout>
     <DimensionLayout dim="1">
       <Group type="103" groupAlignment="0" attributes="0">
           <Group type="102" alignment="0" attributes="0">
+              <EmptySpace min="-2" pref="16" max="-2" attributes="0"/>
+              <Component id="labelTitulo" min="-2" max="-2" attributes="0"/>
               <EmptySpace pref="26" max="32767" attributes="0"/>
               <Group type="103" groupAlignment="3" attributes="0">
                   <Component id="labelId" alignment="3" min="-2" max="-2" attributes="0"/>
@@ -134,6 +144,14 @@
     </DimensionLayout>
   </Layout>
   <SubComponents>
+    <Component class="javax.swing.JLabel" name="labelTitulo">
+      <Properties>
+        <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
+          <Font name="Segoe UI" size="32" style="1"/>
+        </Property>
+        <Property name="text" type="java.lang.String" value="CADASTRO DE ASSEMBLEIAS H&#xcd;BRIDAS"/>
+      </Properties>
+    </Component>
     <Component class="javax.swing.JLabel" name="labelId">
       <Properties>
         <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
