adds form control for online child class

--- a/src/main/java/Principal.form
+++ b/src/main/java/Principal.form
@@ -13,6 +13,9 @@
               <Properties>
                 <Property name="text" type="java.lang.String" value="Abrir Cadastro de Assembleia..."/>
               </Properties>
+              <Events>
+                <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="submenuCadAssembleiaActionPerformed"/>
+              </Events>
               <SubComponents>
                 <MenuItem class="javax.swing.JMenuItem" name="menuItemAbrirCadPresencial">
                   <Properties>
@@ -26,6 +29,9 @@
                   <Properties>
                     <Property name="text" type="java.lang.String" value="Online"/>
                   </Properties>
+                  <Events>
+                    <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="menuItemAbrirCadOnlineActionPerformed"/>
+                  </Events>
                 </MenuItem>
                 <MenuItem class="javax.swing.JMenuItem" name="menuItemAbrirCadHibrida">
                   <Properties>
